welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:12: error: ';' expected but 'if' found.
    }if(estFaceMur==true){
     ^