welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    if(estFaceMur==false){
    	avance();
    	if(getCouleurSol()==Color.green){
    		
    		recule();
    	}else{
    		recule();
    	}
    	
    }if(estFaceMur==true){
    	gauche();
    }
}

def isFacingTrail():Boolean = {
 if(estFaceMur){
 	return false;
 }
    	avance();
    	if(getCouleurSol()==Color.green){
    		
    		recule();
    	
    		
    		
    		return true;
         	
    		}else{
    		recule();	
    		return false;
    			
    		}
    	}
    		
    		
    

